tests/checker/ok/newtype_as_argument.can
Greeting = String

Unit => Program {
    "hello, "
        -> Joined(Greeting("world"))
        -> Print
}
