tests/checker/fail/self_type_name.can
Self = Int

Unit => Program {
    "hello" -> Print
}
